Reorganized docs. Replaced http bench by user bench