@@ -1,187 +1,206 @@
-# The HTTP cache-locality benchmark — method
+# The user-recommendation cache-locality benchmark — method
 
-Why the benchmark is built the way it is, and how to read a run. The short version, and how
-to launch it, is in the [README](../README.md#the-http-cache-locality-benchmark). Measured
-results are in [`performance.md`](performance.md).
+A workload with no I/O and no locks, built to isolate one thing: what it costs when a scheduler
+moves an actor off the core that holds its data. Server:
+[`examples/…/examples/user`](../examples/src/main/java/io/github/pderop/looma/examples/user);
+driver: [`scripts/run-user-bench.sh`](../scripts/run-user-bench.sh). Report format and every
+number quoted below: see the javadoc of `Main` in that package.
 
-## What the server does
+## The workload
 
-Every connection is an actor owning a **private** byte array. Nothing is shared — no session
-map, no lock, no common counter — so any coherence traffic a run produces was created by the
-scheduler, not by the application. Each connection actor is a **root** spawned with an explicit
-`Placement.carrier(n % carriers)`, so connection *n* lands deterministically on carrier
-*n % carriers*.
+One `UserGroup` actor per core, each owning a private map of ~8 000 users (~640 KiB — fits inside
+a core's L2). A request reads a user, follows a friend link, then that friend's friend, 256 times,
+scoring each one. Every lookup depends on the previous one, so nothing can be prefetched — the walk
+is only as fast as memory answers it. One client per group, one request in flight at a time, so
+every reply leaves the actor's mailbox empty. That empty mailbox is the park: the moment the
+scheduler picks which core the actor comes back on.
 
-```
-        ┌──────────────── the actor, on its home carrier ────────────────┐
-read ─► │ modify own array ─► copy it ──┐                               │
-        └───────────────────────────────┼───────────────────────────────┘
-                                        ▼  fork a virtual thread
-                         read the snapshot ─► blocking GET to the mock
-                                        │
-        ┌───────────────────────────────┼───────────────────────────────┐
-        │ ◄── message with body+checksum┘                               │
-        │ modify own array again ─► fork a virtual thread ─────────────►│ write
-        └───────────────────────────────────────────────────────────────┘
-```
+An actor that stays on its carrier keeps its map resident in that core's L2. An actor resumed on a
+random core finds its map elsewhere, and every line it dirties has to be fetched again. Nothing is
+shared between actors, so any cost measured here comes only from *where* the scheduler ran the
+actor — never from contention.
 
-Four details are load-bearing:
+Same binary, three JVM configurations:
 
-- **The walk is a pointer chase.** Each cache line stores the index of the next line to visit — a
-  single random cycle over every line, laid out once per connection. Written the obvious way,
-  `array[random.nextInt(n)]`, the CPU knows a dozen addresses in advance and issues those loads in
-  parallel, which hides exactly the per-line latency difference being measured. A dependent chain
-  cannot be overlapped. The order is random rather than sequential for a second reason: a contiguous
-  scan is what the L2 streamer prefetcher exists to hide. And every visit is a read-modify-**write**,
-  so each line is left dirty and the next core must take it away rather than merely share it.
-- **The pair of modifications straddles a park.** One alone measures nothing; the question is which
-  core the *second* one runs on relative to the first.
-- **What separates them is a real socket round trip, not a sleep.** A timed park resumes from the
-  JDK's timer queue and never exercises the per-carrier sub-poller the locality argument rests on. A
-  mock upstream therefore runs in its own process on its own cores; the server probes it at startup
-  and refuses to bind without it.
-- **The snapshot is what makes this race-free with no synchronisation at all.** The actor keeps
-  mutating its own array while the forked thread reads a copy nobody else can see. The buffer is
-  allocated once per connection and overwritten — a fresh array per request would turn this into an
-  allocation benchmark, and the young collections would sweep the very lines whose residency is
-  being measured.
-
-## Why 0 / 64 / 256 KiB — an L2 experiment, not an L1 one
-
-The P-core the defaults are sized for (i9-14900K, one thread per physical core, HT sibling idle):
-
-| Where the line sits | Size on this part | Typical hit | Shared with |
+| | carriers pinned | stealing | What it answers |
 | --- | --- | --- | --- |
-| L1d | **48 KiB** | ~5 cycles | nobody |
-| L2 | **2 MiB**, private | ~15 cycles | nobody |
-| L3 | 36 MiB | ~40-50 cycles | every core on the die |
-| HITM (Modified in another core's L2) | — | ~70-90 cycles | the core that dirtied it |
+| `carrier` | yes | no | Does the locality exist, and what is it worth |
+| `stealing` | yes | yes | What stealing costs — a measurement, not a default |
+| `jdk` | — | — | The control: same code, same cores, no affinity |
 
-A 64 KiB array is already larger than L1d. And while one connection is parked on the mock, the
-other 11 connections of that carrier walk *their* arrays through the same 48 KiB. **No scheduler
-can keep this working set in L1d.** What affinity can preserve is L2: 12 connections ×
-(64 KiB of `state` + 64 KiB of `snapshot`) = **1.5 MiB**, which still fits in the 2 MiB private L2.
-Coming back to the same core is then an L2 hit; landing on another core is a HITM against a line
-that never needed to move. That is the operating point, and that is why the chase exists: the
-difference being measured is ~15 vs ~80 cycles *per line*, and only a dependent, random, dirtying
-walk actually pays it.
+## Running it
 
-**Size against `connsPerCarrier × 2 × stateKiB`**, never `stateKiB` alone: every connection actor
-owns its `state` array *and* a same-sized `snapshot` buffer. The defaults leave little headroom
-(1.5 MiB of 2 MiB); a looser point (`CONNS_PER_CARRIER=6`, or `STATE_KIB_POINTS="0 32 256"`) would
-be expected to show a larger locality term still.
-
-## How the result can be falsified
-
-Three devices exist to attack the answer rather than confirm it.
-
-- **The three-point argument.** If the gap at `256` does not fall back onto the `0` result, cache
-  residency was never what separated the schedulers at the operating point.
-- **The predicted slope.** A migration costs one HITM per dirty line, so the `jdk`-minus-`carrier`
-  **cycles/request delta** should grow roughly linearly in `stateKiB`. Read that criterion in
-  cycles, not as a ratio: a ratio collapses mechanically as the denominator grows, whether or not
-  the advantage changed.
-- **The wait-to-work ratio.** Per-connection concurrency is 1 (HTTP/1.1 answers in order), so a
-  request costs `think + cpu` and only `cpu` depends on the scheduler. The largest ratio two
-  schedulers can ever show in *throughput* is `(think + cpu_slow) / (think + cpu_fast)`, never
-  `cpu_slow / cpu_fast`. At a 1 ms think time against ~50 µs of work, a scheduler costing twice the
-  cycles surfaces as ~5 % in rps — a real difference, made invisible by arithmetic alone.
-
-The server binary is identical in all nine runs; only JVM flags differ, and the driver asserts the
-scheduler class out of the server log after bind — a missing `--enable-preview` would otherwise
-produce a full set of plausible numbers under the wrong label.
-
-### Why `MOCK_THINK_MICROS` defaults to 0
-
-Every microsecond of upstream think time dilutes the only term the scheduler controls. At `0` the
-mock answers as soon as it has read the request, the wait collapses to the loopback round trip the
-server has to pay anyway, and the difference is as visible in rps as it can be. What `0` does *not*
-remove is the reason the mock exists — the server still makes a real blocking socket call, so its
-continuation still parks on the per-carrier sub-poller rather than on the JDK's timer queue. Raise
-it only to model a genuinely slow backend, and then read cycles/request rather than rps.
-
-Two things `0` changes, worth knowing before reading a run. The mock **stops spinning**: its reactor
-only busy-polls inside the last millisecond before a response is due, and with nothing pending it
-blocks in `select()` instead. And the mock is **much closer to being the bottleneck**, since the
-server now asks for responses as fast as they can be produced — so check the client's rps against
-the concurrency ceiling (`connections / upstreamRoundTrip`, which nothing prints) at *every* point,
-and raise `MOCK_THREADS` before concluding anything from a run whose rps sits on it.
-
-## Sizing the cpusets for your machine
-
-**The driver's defaults only make sense on an i9-14900K**, and the reasoning matters more than the
-numbers. Read the real topology first:
+Two machine settings drift a core's clock during the 20 s measured window, and that drift shows up
+as if it were scheduler signal, not noise. The script checks both, unconditionally, and warns on
+stderr if either is wrong — it doesn't fail the run, and doesn't fix them for you:
 
 ```sh
-lscpu -e     # cores, HT siblings, P vs E
-lscpu -C     # cache levels, shared vs private
+cat /sys/devices/system/cpu/intel_pstate/no_turbo   # want 1 (turbo off)
+sudo cpupower frequency-set -g performance
+echo 1 | sudo tee /sys/devices/system/cpu/intel_pstate/no_turbo
+
+# revert both after benchmarking:
+echo 0 | sudo tee /sys/devices/system/cpu/intel_pstate/no_turbo
+sudo cpupower frequency-set -g powersave
 ```
 
-On a 14900K, `lscpu -e` shows CPUs 0-15 as 8 P-cores **with Hyper-Threading** (each `CORE` value
-appears twice — CPU 0 and CPU 1 are the same physical core), and CPUs 16-31 as 16 E-cores. Two
-logical CPUs of one core share the execution units, the 48 KiB L1d **and the 2 MiB L2**.
-
-That is why `SERVER_CPUS` takes **one CPU per physical core** and never both siblings:
+Defaults below assume the machine this benchmark was developed and run on: an Intel **Core i9-14900K**
+(desktop Raptor Lake). Like every current Intel desktop chip, it is **hybrid**: 8 **P-cores**
+(performance, each with a private 2 MiB L2, 2 hardware threads) and 16 **E-cores** (efficiency,
+no hyperthreading, sharing a 4 MiB L2 per cluster of 4). `CORES=pcore`/`CORES=ecore` below picks
+which set to pin carriers on. On a non-hybrid CPU (most server and laptop parts), or any machine
+where the defaults don't fit, ignore `CORES` and set `CPUS` directly.
 
 ```sh
-SERVER_CPUS=0,2,4,6,8,10,12,14    # 8 carriers, one per physical P-core, 2 MiB private L2 each
-CLIENT_CPUS=16-27                 # 12 E-cores for the load generator
-MOCK_CPUS=28-31                   # the 4th E-core L2 cluster, for the mock upstream
+scripts/run-user-bench.sh                 # the E-cores of a 14900K (default)
+CORES=pcore scripts/run-user-bench.sh     # its P-cores
+CPUS=8-15 scripts/run-user-bench.sh       # any other machine: name the CPUs yourself
 ```
 
-Two carriers on CPUs 0 and 1 would share one 2 MiB L2, halving the budget the sizing assumes. This
-is not hypothetical: the topology maps carrier *i* to the *i*-th CPU **of the affinity mask**, so an
-unrestricted run pairs carriers on HT siblings *first*. Always pass an explicit mask.
+Each of the three configurations runs for ~25 s (5 s warm-up, 20 s measured) and prints:
 
-Three processes, three **disjoint** cpusets. The mock gets its own so that it can never preempt a
-carrier — the run would then measure that instead.
+```
+throughput   121,029 req/s (2,421,057 requests in 20.0s)
+latency      16.52 us/req (closed loop, 2 clients)
+cpu          19.00 us/req (2.30 cores busy)
+migrations   55.3% of 37,829 sampled parks resumed on another carrier
+```
 
-Two consequences of this particular CPU, worth knowing before over-reading any ratio:
+- **cpu us/req** is the real cost of a request, in CPU time. Read it before req/s — with one
+  request in flight per group, nothing here is CPU-bound, so req/s partly reports wake-up latency.
+- **migrations** is counted, not inferred: one park in 64 is traced and checked against the
+  carrier it resumed on.
 
-- 8 carriers × 1.5 MiB is 12 MiB against a **36 MiB L3**, so at the operating point a migration
-  never costs a DRAM round trip: the contrast is an L2 hit against an L3/HITM snoop. Expect
-  single-digit percent to low multiples, not 10×.
-- `lscpu -e` reports L3 id `0` for every CPU — one L3 for the whole chip — so `CLUSTER_LOCAL`
-  permits exactly the same steals as `GLOBAL`, and steal *scoping* is not measurable on this part.
+At the end the three runs are compared side by side, `jdk` as the baseline:
 
-**On another CPU, recompute all three cpusets and both state sizes from `lscpu`.** Nothing in the
-driver reads the topology. Machine preparation (frequency, `perf` permissions, HT siblings offline)
-is a separate checklist: [`machine-prep.md`](machine-prep.md).
+```
+                  req/s     vs jdk  cpu us/req       vs jdk   cores busy    migrations
+carrier          152138      25.7%       13.56       -28.6%         2.06          0.0%
+jdk              121029       0.0%       19.00         0.0%         2.30         55.3%
+```
 
-## The load generator
+(a shortened example — 2 groups, not the default 8). `carrier` costs fewer CPU cycles per request
+and never migrates; `jdk` resumes an actor on whatever worker is free, on a different core than it
+parked on more than half the time.
 
-`wrk` and `wrk2` through `jbang`. `RATE` unset gives **`wrk`, closed loop** — one request in flight
-per connection, the next sent when the response lands, which is what measures a saturation
-throughput. `RATE=<req/s>` gives **`wrk2 -R --latency`, open loop** — the client sends at that rate
-whatever the server does, and queues client-side when it cannot keep up.
+Nothing in the driver reads the topology, so on another CPU `CPUS` has to be set by hand — one CPU
+per carrier, none shared with another carrier's sibling thread. `mvn clean install` must be redone
+on the benchmark machine first: a preview class file only runs on the JDK build that produced it.
 
-That distinction is not cosmetic. In a closed loop a server stall makes the client *stop sending*
-during exactly the bad window, so the requests that would have suffered are never issued and never
-appear in the histogram. That is **coordinated omission**. Rule: **publish throughput from the
-closed-loop run, and latency only from an open-loop run** at a rate below the throughput the closed
-loop found.
+## Measuring it with `perf`
 
-## Reading a run
+`perf` is the Linux kernel's built-in profiler: it reads hardware performance counters straight off
+the CPU. Two of its subcommands are used here, for two different questions:
 
-**The headline metric is cycles per request** — `cpu_core/cycles/` from `*.perfstat.txt` divided by
-the request count in `*.client.txt` — not raw rps, because it absorbs frequency drift. Then, in
-order:
+- **`perf stat`** just counts. Point it at a running process for a while and it prints totals for a
+  fixed list of events — cycles burned, instructions retired, cache accesses. No sampling, no
+  guessing: exact counts for exactly the window it ran.
+- **`perf c2c`** ("cache-to-cache") is narrower and does something perf stat cannot: it samples
+  individual memory loads and, for the slow ones, records *which cache* satisfied it — including
+  whether the line had to be pulled out of another core's cache first. That's the one number this
+  benchmark's whole hypothesis rests on (see `PERF=c2c` below).
 
-1. **Check saturation before reading any rps at all** (`task-clock` ÷ measured seconds ÷ carriers).
-   Below roughly 90 %, the carriers were idling on the backend and that run compares nothing.
-2. **The `0` KiB control must be flat.** Whatever gap survives there is dispatch cost, not locality.
-3. **The `256` KiB point must fall back onto the `0` KiB point**, in cycles/request delta.
-4. **The gap should scale with `stateKiB`** between those two ends.
-5. **`perf c2c` should order the three configurations**: `carrier` lowest HITM, `stealing` above it,
-   `jdk` at the top. This is the qualitative evidence behind the quantitative one.
-6. **Check the concurrency ceiling** against the throughput obtained: throughput cannot exceed
-   `connections / upstreamRoundTrip`. Sitting on it means the run measured the client and the mock,
-   not the schedulers.
+`PERF=stat|c2c|both` attaches one or both to the JVM and prints extra tables at the end. Off by
+default — the runs above need nothing but `taskset`.
 
-Every knob is an environment variable: `SERVER_CPUS`, `CLIENT_CPUS`, `MOCK_CPUS`,
-`MOCK_THINK_MICROS`, `STATE_KIB_POINTS`, `CONNS_PER_CARRIER`, `DURATION`, `WARMUP`, `RATE`, `HEAP`,
-`FAST`. An explicit `DURATION`/`WARMUP` wins over `FAST=1`. `WRK=wrk WRK2=wrk2` uses native binaries
-instead of jbang.
+```sh
+PERF=stat scripts/run-user-bench.sh
+PERF=c2c  scripts/run-user-bench.sh
+PERF=both scripts/run-user-bench.sh
+```
 
-Everything lands in `target/http-bench/<timestamp>/`: `*.client.txt` (with the exact command in
-`*.client.cmd`), `*.perfstat.txt`, `*.c2c.txt`, `env.txt`, and each server's own log.
+`perf` needs `perf_event_paranoid <= 1`:
+
+```sh
+cat /proc/sys/kernel/perf_event_paranoid
+sudo sysctl kernel.perf_event_paranoid=1        # if it reads higher than 1, until next reboot
+
+# to make it stick across reboots:
+echo 'kernel.perf_event_paranoid=1' | sudo tee /etc/sysctl.d/local-perf.conf
+```
+
+Above that value the run still completes; the perf tables just come back empty, and the script
+says so once, up front, rather than leaving blank columns to explain later.
+
+### `PERF=stat`
+
+For each scheduler, the script runs this against the JVM's pid, for a window inside the 20 s
+measured:
+
+```sh
+perf stat -p <pid> -e task-clock,cycles,instructions,cache-references,cache-misses -- sleep <n>
+```
+
+Raw output, one line per event (on a hybrid P/E chip like the 14900K, perf resolves each bare event
+name on both PMUs, and the one this run never touches reports `<not counted>`):
+
+```
+     31307.31 msec task-clock                 #  2.236 CPUs utilized
+ 123241258197      cpu_atom/cycles/           #  3.937 GHz
+    <not counted>   cpu_core/cycles/
+  57019119132      cpu_atom/instructions/     #  0.46  insn per cycle
+    652174549      cpu_atom/cache-references/ # 20.831 M/sec
+      2126856      cpu_atom/cache-misses/     #  0.33% of all cache refs
+   14.004432693 seconds time elapsed
+```
+
+A raw counter is a total over that window, and the three schedulers never serve the same number of
+requests in it — nothing is comparable until each counter is divided by requests actually served,
+`req = req/s × seconds time elapsed` (`req/s` from `Main`'s own report, `seconds time elapsed` read
+back from this `perf stat` run rather than assumed, since it can be a hair under the requested
+sleep). The script does that division and prints:
+
+```
+               cycles/req     vs jdk       IPC  cache-miss/req   miss rate
+carrier             45879     -36.6%     0.759             2.3        1.2%
+jdk                 72365       0.0%     0.469             1.3        0.3%
+```
+
+Each column is one raw counter turned into a per-request rate, except IPC which relates two
+counters to each other:
+
+- **cycles/req** = `cycles / req`. Cost of one request, in cycles. Immune to clock speed and to
+  how long the sampling window ran, unlike raw cycles or raw req/s. This is the headline number.
+- **vs jdk** — `cycles/req` relative to the `jdk` row, so the control is always 0.0% and the
+  others read as the percentage of cost that scheduler removed (negative) or added (positive).
+- **IPC** = `instructions / cycles` — instructions retired per cycle, *not* divided by `req`.
+  Low IPC means the core is mostly stalled waiting on memory, not computing; it's what explains
+  *why* cycles/req differs, not another way of stating the request cost itself.
+- **cache-miss/req** = `cache-misses / req` — how many memory accesses left the cache hierarchy
+  entirely, per request.
+- **miss rate** = `cache-misses / cache-references × 100` — of the memory accesses perf saw, the
+  percentage that missed. Independent of `req`: a scheduler that does more total work per request
+  (more references) can have a lower miss rate than one that does less, while still losing on
+  cache-miss/req.
+
+### `PERF=c2c`
+
+Runs three *extra* ~25 s runs, one per scheduler, each captured instead with:
+
+```sh
+perf c2c record -p <pid> -- sleep <n>
+perf c2c report --stdio
+```
+
+`perf c2c` samples slow loads and tags each one with why it was slow. The number that matters is
+**HITM**: a load that found its line dirty in another core's cache and had to wait for that core to
+hand it over — 70-90 cycles, the direct cost of a migration. Nothing is shared between actors here,
+so a HITM can only mean the scheduler resumed an actor on a core other than the one that dirtied
+its map. Raw `perf c2c report` output:
+
+```
+  Load Operations                   :     108185      <- sampled loads
+  Load Local HITM                   :        132      <- line was dirty in another core's cache
+  Load Remote HITM                  :          0      <- ...on another socket (0 = single socket)
+```
+
+The script reads those three numbers out of each run and prints:
+
+```
+                 load ops       HITM    HITM/load
+carrier            104958          6        0.01%
+jdk                108185        132        0.12%
+```
+
+Compare the **ratio**, not the totals — `perf c2c` samples, it doesn't count. Expect `carrier`
+lowest and `jdk` highest: that ordering is the whole hypothesis, measured directly.
